--- a/paper/codegen.tex
+++ b/paper/codegen.tex
@@ -13,6 +13,6 @@ RETURN VALUE
 
 We developed an input file which contained the call name, (error) return value, \texttt{errno} (if applicable), and the header file to be included in the wrapper (usually given at the top of the \texttt{man} page). Our script parsed this input file and generated the appropriate wrappers. The script uses the \texttt{pycparser} Python module \cite{pycparser} to traverse the AST derived from the header file.
 
-This technique has a number of benefits, the primary one being that it reduces development time when wanting to make small changes to all of the wrappers. For example, for the testing described here, we want to add a ``coin flip'' to the wrapper shown above, which simply determines at random whether to return the correct value or the error value. It is trivial to do this via code generation, by simply adding a few lines to the script and re-running it to update all of the downstream wrappers.
+This technique has several benefits, the primary one being that it reduces development time when wanting to make small changes to all of the wrappers. For example, for the testing described here, we want to add a ``coin flip'' to the wrapper shown above, which simply determines at random whether to return the correct value or the error value. It is trivial to do this via code generation, by simply adding a few lines to the script and re-running it to update all of the downstream wrappers.
 
-At the outset, it was unclear whether the added development cost of this approach would outweigh the potential speedup in development time. It is true that the wrapper files were only infrequently modified, however when dealing with calls approaching 25 in number, it becomes increasingly tedious to make any number of changes in a manual way. At the very least, we hope that the lessons we have learned in exploring this approach will benefit others in the testing community.
+We are unsure whether the added development cost of this approach outweighs the potential speedup in development time. It is true that the wrapper files are only infrequently modified, however when dealing with almost 20 wrappers, it becomes increasingly tedious to make changes in a manual way. At the very least, we hope that these techniques are useful for others in the testing community.
