responses to rest of comments

--- a/paper/citations.bib
+++ b/paper/citations.bib
@@ -78,3 +78,8 @@
 	title={GLib Source Code},
 	howpublished = "\url{https://github.com/GNOME/glib}"
 }
+
+@misc{github,
+	title={{ReturnValueTester} {GitHub} Repository},
+	howpublished = "\url{https://github.com/mdreid/ReturnValueTester/}"
+}
