--- a/paper/codegen.tex
+++ b/paper/codegen.tex
@@ -11,7 +11,7 @@ RETURN VALUE
 ...On error, these functions return NULL...
 \end{lstlisting}
 
-We developed an input file which contained the call name, (error) return value, \texttt{errno} (if applicable), and the header file to be included in the wrapper (usually given at the top of the \texttt{man} page). Our script parsed this input file and generated the appropriate wrappers. The script uses the \texttt{pycparser} Python module \cite{pycparser} to traverse the AST derived from the header file.
+We developed an input file which contained the call name, (error) return value, \texttt{errno} (if applicable), and the header file to be included in the wrapper (usually given at the top of the \texttt{man} page). Our script parsed this input file and generated the appropriate wrappers. The script uses the \texttt{pycparser} Python module \cite{pycparser} to traverse the abstract syntax tree derived from the header file.
 
 This technique has several benefits, the primary one being that it reduces development time when wanting to make small changes to all of the wrappers. For example, for the testing described here, we want to add a ``coin flip'' to the wrapper shown above, which simply determines at random whether to return the correct value or the error value. It is trivial to do this via code generation, by simply adding a few lines to the script and re-running it to update all of the downstream wrappers.
 
