minor changes to text

--- a/paper/largescale.tex
+++ b/paper/largescale.tex
@@ -48,7 +48,7 @@ One difficulty in testing large-scale applications is determining the set of beh
 			\texttt{fopen} & & C & C & & C & & & & & \\ \hline
 		\end{tabular} 
 		\end{adjustbox}
-		Key: H = hang, C = core dump, CH = hang and core dump (in separate runs), N/A = not called by application, empty cell = called by application, no crash or hang
+		Key: H = hang, C = core dump, CH = hang and core dump (in separate runs), N/A = not called by application, empty cell = called by application, but no crash or hang
 \label{table:large_scale}
 \end{table}
 
