--- a/paper/small_scale.tex
+++ b/paper/small_scale.tex
@@ -37,9 +37,19 @@ zip&Info-Zip & 3.0 \\
 \end{table}
 
 \PreTable
+%calloc  creat   execv   fork    malloc  opendir pipe    pthread_create 	realloc
+%close   execvp  fopen   fstat   mmap    open    poll    pthread_mutex	read    
+%write
+
+% ls ../wrappers/*.so | rev | cut -d " " -f 1 | rev | cut -d "/" -f 3 | rev | cut -d _ -f 2- | rev  | column -c 80
 \begin{lstlisting}[captionpos=b, label={lst:small_scale_wrappers},caption={Wrapped calls for testing small-scale utilities}]
-calloc  creat   execv   fork    malloc  opendir pipe    pthread_create 	realloc
-close   execvp  fopen   fstat   mmap    open    poll    pthread_mutex	read    
-write
+calloc                  fstat                   pthread_create
+close                   malloc                  pthread_mutex_init
+creat                   mmap                    read
+execvp                  opendir                 realloc
+execv                   open                    write
+fopen                   pipe
+fork                    poll
 \end{lstlisting}
+
 \PostTable
