technical report technical report

--- a/paper/citations.bib
+++ b/paper/citations.bib
@@ -39,8 +39,7 @@
 @techreport{bart,
   title={Fuzz revisited: A re-examination of the reliability of {UNIX} utilities and services},
   author={Miller, Barton P and Koski, David and Lee, Cjin Pheow and Maganty, Vivekananda and Murthy, Ravi and Natarajan, Ajitkumar and Steidl, Jeff},
-  year=1995,
-  institution={Technical report}
+  year=1995
 }
 
 @article{bartoriginal,
