--- a/paper/citations.bib
+++ b/paper/citations.bib
@@ -23,6 +23,12 @@
 	month="October",
 }
 
+@manual{ldpreload,
+	title={\texttt{ld.so(8)} Linux Programmer's Manual},
+	year="2016",
+	month="October"
+}
+
 @manual{dll,
 	title={Working with the AppInit\_DLLs registry value},
 	year="2006",
@@ -39,7 +45,8 @@
 @techreport{bart,
   title={Fuzz revisited: A re-examination of the reliability of {UNIX} utilities and services},
   author={Miller, Barton P and Koski, David and Lee, Cjin Pheow and Maganty, Vivekananda and Murthy, Ravi and Natarajan, Ajitkumar and Steidl, Jeff},
-  year=1995
+  year=1995,
+  institution={University of Wisconsin--Madison},
 }
 
 @article{bartoriginal,
