--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -1,1 +1,1 @@
-We investigated the robustness of Linux applications using a fuzz testing paradigm. We developed a mechanism to control the value returned to applications from various system and library calls. Using \texttt{LD\_PRELOAD}, we were able to intercept calls and inject erroneous return values into the calling application. In this way, we could analyze how well error conditions were handled by the tested applications. We divided our testing suite loosely between small-scale utilities and large-scale applications. We found that, of the 88 applications tested, 31 crashed for at least one of the 19 calls that were fuzzed. We have made the source code used to perform the testing described here available in a public GitHub repository \cite{github}.
+We investigated the robustness of Linux applications using a fuzz testing paradigm. We developed a mechanism to control the value returned to applications from various system and library calls. Using \texttt{LD\_PRELOAD}, we were able to intercept calls and inject erroneous return values into the calling application. In this way, we could analyze how well error conditions were handled by the tested applications. We divided our testing suite loosely between small-scale utilities and large-scale applications. We found that, of the 88 applications tested, 31 crashed or hung for at least one of the 19 calls that were fuzzed. We have made the source code used to perform the testing described here available in a public GitHub repository \cite{github}.
