--- a/paper/codegen.tex
+++ b/paper/codegen.tex
@@ -1,5 +1,5 @@
 \subsection{Wrapper Generation}
-The wrappers described in section \ref{ld_preload_implementation} (and illustrated by example in listing \ref{lst:wrapper_example}) are uniformly structured: they contain one method, the signature of which is known beforehand (as it is identical to that of the overridden call). Furthermore, nothing specific about its implementation is necessary for generating the wrapper. Thus, wrappers are good candidates for automatic code generation by inspection of the appropriate header files. For example, by examining the \texttt{stdlib.h} file and knowing a few pieces of information from the \texttt{MALLOC(3)} page, we can completely construct the aforementioned wrapper:
+The wrappers described in section \ref{ld_preload_implementation} (and illustrated by example in listing \ref{lst:wrapper_example}) are uniformly structured: they contain one method, the signature of which is identical to that of the overridden call. Furthermore, nothing specific about its implementation is necessary for generating the wrapper. Thus, wrappers are good candidates for automatic code generation by inspection of the appropriate header files. For example, by examining the \texttt{stdlib.h} file and knowing one piece of information from the \texttt{MALLOC(3)} \texttt{man} page, we can completely construct the aforementioned wrapper:
 
 \begin{lstlisting}[caption=Excerpt from \texttt{/usr/include/stdlib.h}, language=C]
 /* Allocate SIZE bytes of memory.  */
@@ -10,6 +10,13 @@ extern void *malloc (size_t __size) __THROW __attribute_malloc__ __wur;
 RETURN VALUE
 ...On error, these functions return NULL...
 \end{lstlisting}
+
+\begin{figure}[h]
+\centering
+\includegraphics[width=0.8\textwidth]{codegen_figure}
+\caption{derp}
+\label{derp}
+\end{figure}
 
 We developed an input file which contained the call name, (error) return value, \texttt{errno} (if applicable), and the header file to be included in the wrapper (usually given at the top of the \texttt{man} page). Our script parsed this input file and generated the appropriate wrappers. The script uses the \texttt{pycparser} Python module \cite{pycparser} to traverse the abstract syntax tree derived from the header file.
 
