--- a/paper/relatedwork.tex
+++ b/paper/relatedwork.tex
@@ -1,3 +1,3 @@
-Pioneered by Miller et al. in 1990, fuzz testing is conducted by passing randomly generated input to applications in order to find bugs \cite{bartoriginal}. In that work, they used fuzz testing to assess reliability in UNIX applications by determining the number that crashed or hung when passed fuzzed input. Surprisingly, they found that 25-33\% of the applications tested crashed or hung. In a follow-up study in 1995, Miller et al. found that, although the programs that were tested in the previous study improved in reliability, almost 50\% of the programs tested crashed or hung \cite{bart}.
+Pioneered by Miller et al. in 1990, fuzz testing is conducted by passing randomly generated input to applications in order to find bugs \cite{bartoriginal}. In their original work, they used fuzz testing to assess reliability in UNIX applications by determining the number that crashed or hung when passed fuzzed input. Surprisingly, they found that 25-33\% of the applications tested crashed or hung. In a follow-up study in 1995, Miller et al. found that, although the programs that were tested in the previous study improved in reliability, almost 50\% of the programs tested crashed or hung \cite{bart}.
 
-In this second study, rather than passing randomly generated data, they intercepted \texttt{calloc}, \texttt{malloc}, and \texttt{realloc} calls and returned an error value with some probability $p$. Here, we extend that work by expanding the scope of both the calls intercepted, and the number of programs tested. In addition to the memory allocation-related functions, we add file operation calls, \texttt{pthread}-related calls, and others (see Table \ref{lst:small_scale_wrappers}). In addition to many of the same command-line utilities tested, we expand the scope to include larger-scale graphical programs and several other common small-scale utilities.
+In their second study, rather than passing randomly generated data, they intercepted \texttt{calloc}, \texttt{malloc}, and \texttt{realloc} calls and returned an error value with some probability $p$. Here, we extend that work by expanding the scope of both the calls intercepted, and the number of programs tested. In addition to the memory allocation-related functions, we add file operation calls, \texttt{pthread}-related calls, and others (see Table \ref{lst:small_scale_wrappers}). We also expand the scope to include larger-scale graphical programs and several other common small-scale utilities, in addition to many of the same command-line utilities they tested.
